[package]
name = "bevy-smart_block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["mp3", "wav"] }
bevy_embedded_assets = "0.10.2"
kd-tree = "0.6.0"
rand = "0.9.0-alpha.1"
typenum = "1.17.0"

[profile.release]
lto = true
opt-level = 's'
